<resources>
    <string name="app_name">備蓄品貸借アプリ</string>
    <string name="personal_data_entry">パーソナルデータ登録</string>
    <string name="stockpile_entry">備蓄品データ登録</string>
    <string name="stockpile_map">備蓄品マップ</string>
    <string name="map_open_switch_text">備蓄品マップを利用する</string>
    <string name="stockpile_point">備蓄地点</string>
    <string name="stockpile_point_edit_hint">住所または施設名</string>
    <string name="contact_info">連絡先1</string>
    <string name="contact_info_edit_hint">災害時に表示する連絡先</string>
    <string name="contact_info_2">連絡先2</string>
    <string name="contact_info_edit_hint_2">例:電話番号、TwitterIDなど</string>
    <string name="get_location">位置情報を取得</string>
    <string name="conf_location">位置情報を確認</string>
    <string name="entry">登録</string>
    <string name="title_activity_maps">Map</string>
    <string name="stockpile_name">備蓄品名</string>
    <string name="stockpile_req_num">必要数</string>
    <string name="stockpile_num">備蓄数</string>
    <string name="emergency_level">緊急度</string>
    <string name="stockpile_add">備蓄品データ追加</string>
    <string name="stockpile_remove">備蓄品データ削除</string>
    <string name="stockpile_delete">全削除</string>
    <string name="stockpile_map_open">備蓄品マップを表示</string>
    <string name="stockpile_search">検索備蓄品</string>
    <string name="stockpile_search_edit_hint">備蓄品名を入力</string>
    <string name="title_activity_stockpile_maps">Map</string>
    <string-array name="stockpile_list">
        <item>飲料水500ml</item>
        <item>飲料水2L</item>
        <item>保存食</item>
        <item>毛布</item>
        <item>ダンボール</item>
        <item>コンロ</item>
        <item>皿</item>
        <item>コップ</item>
        <item>箸</item>
        <item>スプーン</item>
        <item>ガムテープ</item>
        <item>はさみ</item>
        <item>紐</item>
        <item>ロープ</item>
    </string-array>
</resources>
