<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stockpile_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.tsuka.stockpileloanapplication.activities.StockpileEntryActivity"
    android:onClick="onClickFocus">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:text="@string/stockpile_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:id="@+id/stockpileEntryText" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:text="@string/stockpile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stockpileName"
                    android:gravity="center"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/stockpile_req_num"
                    android:id="@+id/stockpileReqNum"
                    android:gravity="center"
                    android:ems="4"
                    android:layout_height="wrap_content"
                    android:layout_width="60dp" />
                <TextView
                    android:text="@string/stockpile_num_unit"
                    android:layout_height="wrap_content"
                    android:id="@+id/stockpileReqNumUnit"
                    android:gravity="center"
                    android:ems="4"
                    android:layout_width="60dp" />
                <TextView
                    android:text="@string/stockpile_num"
                    android:layout_height="wrap_content"
                    android:id="@+id/stockpileNum"
                    android:gravity="center"
                    android:ems="4"
                    android:layout_width="60dp" />
                <TextView
                    android:text="@string/stockpile_num_unit"
                    android:layout_height="wrap_content"
                    android:id="@+id/stockpileNumUnit"
                    android:gravity="center"
                    android:ems="4"
                    android:layout_width="60dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/stockpileDataList"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:divider="@color/colorBackground"
                android:dividerHeight="5px"
                android:background="@color/listBackground" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/stockpileAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onStockpileAddClick"
                    android:text="@string/stockpile_add"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/stockpile_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onStockpileRemoveClick"
                    android:id="@+id/stockpileDeleteButton"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:text="@string/entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onStockpileEntryClick"
                android:id="@+id/stockpileEntryButton" />

        </LinearLayout>


</RelativeLayout>
