<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.tsuka.stockpileloanapplication.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="24sp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:text="@string/personal_data_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/personalEntry"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:onClick="onPersonalEntryClick" />

        <Button
            android:text="@string/stockpile_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stockpileEntry"
            app:layout_constraintTop_toBottomOf="@+id/personalEntry"
            app:layout_constraintRight_toRightOf="@+id/personalEntry"
            app:layout_constraintLeft_toLeftOf="@+id/personalEntry"
            android:layout_marginTop="32dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:text="@string/stockpile_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stockpileMap"
            app:layout_constraintTop_toBottomOf="@+id/stockpileEntry"
            app:layout_constraintRight_toRightOf="@+id/stockpileEntry"
            app:layout_constraintLeft_toLeftOf="@+id/stockpileEntry"
            android:layout_marginTop="32dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockpileOpenSwitch"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/stockpileMap"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/map_open_switch_text" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
