<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:onClick="onBackClick"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tsuka.stockpileloanapplication.activities.MapSearchActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mapSearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/stockpile_map"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/getLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="onGetLocationClick"
            android:text="@string/get_location"
            app:layout_constraintBottom_toTopOf="@+id/searchStockpile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/searchStockpileGuideline"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="198dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="198dp" />

        <TextView
            android:id="@+id/searchStockpile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/stockpile_search"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchStockpileGuideline" />

        <EditText
            android:id="@+id/searchStockpileEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/stockpile_search_edit_hint"
            android:inputType="text"
            android:labelFor="@+id/searchStockpile"
            android:maxLength="255"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchStockpile"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintLeft_toRightOf="@+id/searchStockpile"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/displayStockpileMapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:onClick="onDisplayStockpileMapClick"
            android:text="@string/stockpile_map_open"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchStockpileEdit"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
