<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.tsuka.stockpileloanapplication.PersonalEntryActivity"
    android:onClick="onBackClick">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/personalEntryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/personal_data_entry"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/numPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/num_people"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/numPeopleGuideline" />

        <EditText
            android:id="@+id/numPeopleEdit"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:labelFor="@+id/numPeople"
            app:layout_constraintBaseline_toBaselineOf="@+id/numPeople"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/numPeople"
            app:layout_constraintRight_toLeftOf="@+id/peoples"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/peoples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/peoples"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/numPeopleGuideline" />

        <android.support.constraint.Guideline
            android:id="@+id/numPeopleGuideline"
            android:layout_width="352dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="98dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="98dp" />

        <android.support.constraint.Guideline
            android:id="@+id/contactInfoGuideline"
            android:layout_width="352dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="178dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="178dp" />

        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/contact_info"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactInfoGuideline" />

        <EditText
            android:id="@+id/contactInfoEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/contact_info_edit_hint"
            android:inputType="text"
            android:labelFor="@+id/contactInfo"
            app:layout_constraintBaseline_toBaselineOf="@+id/contactInfo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/contactInfo"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="LabelFor" />

        <android.support.constraint.Guideline
            android:id="@+id/contactInfoGuideline2"
            android:layout_width="352dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="252dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="252dp" />

        <TextView
            android:id="@+id/contactInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/contact_info_2"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactInfoGuideline2" />

        <EditText
            android:id="@+id/contactInfoEdit2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/contact_info_edit_hint_2"
            android:inputType="text"
            android:labelFor="@+id/contactInfo2"
            app:layout_constraintBaseline_toBaselineOf="@+id/contactInfo2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/contactInfo2"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="LabelFor" />

        <Button
            android:text="@string/get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getLocationButton"
            android:onClick="onGetLocationClick"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/contactInfoEdit2" />

        <Button
            android:text="@string/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textStyle="normal|bold"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/getLocationButton"
            android:onClick="onEntryClick" />

        <Button
            android:text="@string/conf_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confLocationButton"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/getLocationButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            android:onClick="onConfLocationClick" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
